--- a/assignment_4.Rmd
+++ b/assignment_4.Rmd
@@ -125,13 +125,22 @@ Revolutions?
 ```{r}
 library(kableExtra)
 list(model1, model2, model3, model4) |>
-  modelsummary(stars=T, gof_map = c("nobs", "r.squared")) 
-# use functions from modelsummary to edit this table
+  modelsummary(stars=T, gof_map = c("nobs", "r.squared")) %>%
+  row_spec(3:4, color = "white", background = "red" )
 ```
 
 **Question 3.8**: Write a piece of code that exports this table (without the formatting) to a Word document. 
 
 ```{r}
+library(sjPlot)
+
+modelsummary <- list(model1, model2, model3, model4) |>
+  modelsummary(stars=T, gof_map = c("nobs", "r.squared")
+              
+) 
+
+
+tab_df(modelsummary, file = "modelsummary.doc")
 
 ```
 
