--- a/assignment_4.Rmd
+++ b/assignment_4.Rmd
@@ -52,9 +52,8 @@ One of the variables in the dataset is `revolutions`, the number of revolutions,
 ```{r}
 library(modelsummary); library(tidyverse)
 
-GrowthSW <- GrowthSW %>% mutate(if_else(revolutions == 0, "revolutions equal to 0", "revolutions greater than 0" ))
+GrowthSW <- GrowthSW %>% mutate(treat = if_else(revolutions == 0, "revolutions equal to 0", "revolutions greater than 0" ))
 
-GrowthSW <- GrowthSW %>% rename('treat' = 'if_else(revolutions == 0, "revolutions equal to 0", "revolutions greater than 0")')
 
 datasummary <- datasummary(growth + rgdp60 ~ treat * (mean + median + sd + min + max), data = GrowthSW) 
 print(datasummary)
@@ -79,7 +78,7 @@ t.test(GrowthSW$growth ~ GrowthSW$treat)
 
 **Question 3.2**: What is the $p$-value of the test, and what does that mean? Write down your answer below.
 
-the p-value is 0.06871 ?????
+the p-value is 0.06871. this means that it falls inside the 95% confidence interval that was set for the t-test. this then means that the original hypothesis is not rejected which is that growth rates are affected by revolutions.
 
 We can also control for other factors by including them in a linear model, for example:
 
@@ -116,7 +115,7 @@ list(model1, model2, model3, model4) |>
 
 **Question 3.6**: According to this analysis, what is the main driver of economic growth? Why?
 
-according to this analysis the main driver of economic growth is tradeshare, this is because its coeficcients are way higher than the other variables. this means that for an increase in tradeshare growth increases more relative to an increase, by the same amount, in a different factor.
+according to this analysis the main driver of economic growth is tradeshare, this is because its coeficcients are way higher than the other variables. this means that for an increase in tradeshare growth increases more relative to an increase, by the same amount, in a different factor. 
 
 
 
